--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -139,6 +139,7 @@ section.with-pagination .pagination {
     font-style: normal;
     text-transform: uppercase;
     cursor: pointer;
+    transition: color 0.5s;
 }
 
 .icon:not(button):not(span):not(i) {
@@ -290,6 +291,7 @@ li:hover {
     /*    text-shadow: 0px 1px 0px #f50;*/
     color: darkgray;
     text-transform: uppercase;
+    transition: color 0.5s;
 }
 
 .pagination i:hover {
