--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,9 +69,11 @@ body {
     padding: 0;
 }
 
+/*
 body * {
     font-family: inherit;
 }
+*/
 
 body.show-loader .global-loader {
     display: block;
@@ -180,12 +182,16 @@ section.with-pagination .pagination {
     display: inline-block;
 }
 
+button.btn {
+    font-family: 'Gotham SSm A', 'Gotham SSm B', Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+}
+
 .clear-btn {
     background-color: transparent;
     border-width: 0;
 }
 
-.btn {
+.btn {    
     font-style: normal;
     text-transform: uppercase;
     cursor: pointer;
@@ -241,6 +247,10 @@ iframe {
     border-radius: 4px;
 }
 
+input {
+    font-family: 'Gotham SSm A', 'Gotham SSm B', Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+}
+
 input[type=text] {
     font-size: 1rem;
     width: 100%;
@@ -252,8 +262,8 @@ input[type=text] {
 }
 
 ::-webkit-input-placeholder {
-    /*    font-style: italic;*/
     text-transform: capitalize;
+    font-family: 'Gotham SSm A', 'Gotham SSm B', Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
 }
 
 ul:not(:empty) {
@@ -311,7 +321,11 @@ li:hover {
 }
 
 .visited {
-    font-weight: 600;
+    color: darkgray;
+}
+
+.visited.no-artwork .thumbnail {
+    background-color: plum;
 }
 
 
