--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@
 /* scss-lint:disable ColorKeyword */
 /* scss-lint:disable Compass::PropertyWithMixin */
 /* line 3, ../../src/sass/_placeholders.scss */
-.hide, body.show-player-loader iframe, .overlay, .pagination {
+.hide, body.show-player-loader iframe, .overlay, .loader--global, .loader--player, .pagination {
   display: none;
 }
 
@@ -18,48 +18,74 @@ iframe, body.show-loader .global-loader, body.show-loader .overlay, body.show-pl
 }
 
 /* line 15, ../../src/sass/_placeholders.scss */
-.btn:not(button):not(span):not(i) {
+.btni, .btnspan {
   display: inline-block;
 }
 
-/* line 19, ../../src/sass/_placeholders.scss */
+/* line 23, ../../src/sass/_placeholders.scss */
 .prev {
   float: left;
 }
 
-/* line 23, ../../src/sass/_placeholders.scss */
+/* line 27, ../../src/sass/_placeholders.scss */
 .next {
   float: right;
 }
 
+/* line 31, ../../src/sass/_placeholders.scss */
+body.show-player-loader .player {
+  position: relative;
+}
+
 /* line 35, ../../src/sass/_placeholders.scss */
+.overlay, .loader--global, .loader--player, .pagination {
+  position: absolute;
+}
+
+/* line 39, ../../src/sass/_placeholders.scss */
 body.fix-nav nav {
   position: fixed;
 }
 
-/* line 43, ../../src/sass/_placeholders.scss */
+/* line 47, ../../src/sass/_placeholders.scss */
+.loader--global, .loader--player {
+  margin: auto;
+}
+
+/* line 51, ../../src/sass/_placeholders.scss */
+main {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* line 56, ../../src/sass/_placeholders.scss */
 body {
   margin: 0;
 }
 
-/* line 47, ../../src/sass/_placeholders.scss */
+/* line 60, ../../src/sass/_placeholders.scss */
 body {
   padding: 0;
 }
 
-/* line 51, ../../src/sass/_placeholders.scss */
-body.fix-nav nav, .pagination {
+/* line 64, ../../src/sass/_placeholders.scss */
+body.fix-nav nav, .overlay, iframe, .pagination {
   width: 100%;
 }
 
-/* line 55, ../../src/sass/_placeholders.scss */
+/* line 68, ../../src/sass/_placeholders.scss */
 html {
   height: 100%;
 }
 
-/* line 59, ../../src/sass/_placeholders.scss */
-button.btn, body, input, ::-webkit-input-placeholder {
+/* line 72, ../../src/sass/_placeholders.scss */
+.btnbutton, body, input, ::-webkit-input-placeholder {
   font-family: 'Gotham SSm A', 'Gotham SSm B', Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+}
+
+/* line 80, ../../src/sass/_placeholders.scss */
+.btn, li, .pagination i {
+  cursor: pointer;
 }
 
 /* scss-lint:disable Compass::PropertyWithMixin */
@@ -606,43 +632,61 @@ html *:after, html *:before, html *:not(head) {
   font-weight: 700;
   font-style: normal;
 }
-/* line 1, ../../src/sass/_components.scss */
-.btn {
-  font-style: normal;
-  text-transform: uppercase;
-  cursor: pointer;
-  transition: color .5s;
-}
-/* line 11, ../../src/sass/_components.scss */
-.btn.clear-btn {
+/* scss-lint:disable ColorKeyword */
+/* scss-lint:disable ColorVariable */
+/* line 3, ../../src/sass/_components.scss */
+.btn.btn--clear, .btn.btn--style-1 {
   background-color: transparent;
   border-width: 0;
 }
 
+/* line 8, ../../src/sass/_components.scss */
+.btn {
+  font-style: normal;
+  text-transform: uppercase;
+  transition: color .5s;
+}
+/* line 28, ../../src/sass/_components.scss */
+.btn.btn--style-1 {
+  outline: 0;
+  font-size: .75em;
+  color: darkgray;
+}
+/* line 34, ../../src/sass/_components.scss */
+.btn.btn--style-1.btn--selected {
+  color: #f50;
+}
+/* line 37, ../../src/sass/_components.scss */
+.btn.btn--style-1.btn--selected:hover {
+  color: #f50;
+}
+/* line 42, ../../src/sass/_components.scss */
+.btn.btn--style-1:hover {
+  color: #666;
+}
+
+/* line 5, ../../src/sass/_modifiers.scss */
+.hide--important {
+  display: none !important;
+}
+
 /* reference: http://projects.lukehaas.me/css-loaders/ ;) */
-/* scss-lint:disable all */
-/* line 3, ../../src/sass/_loader.scss */
-.loader {
-  margin: 60px auto;
+/* scss-lint:disable Compass::PropertyWithMixin */
+/* scss-lint:disable ColorVariable */
+/* line 4, ../../src/sass/_loader.scss */
+.loader, .loader--global, .loader--player {
   font-size: 10px;
   position: relative;
-  text-indent: -9999em;
-  border-top: 1.1em solid rgba(255, 85, 0, 0.2);
-  border-right: 1.1em solid rgba(255, 85, 0, 0.2);
-  border-bottom: 1.1em solid rgba(255, 85, 0, 0.2);
-  border-left: 1.1em solid #ff5500;
+  text-indent: -9999rem;
+  border-top: 1.1rem solid rgba(255, 85, 0, 0.2);
+  border-right: 1.1rem solid rgba(255, 85, 0, 0.2);
+  border-bottom: 1.1rem solid rgba(255, 85, 0, 0.2);
+  border-left: 1.1rem solid #f50;
   transform: translateZ(0);
   animation: load8 1.1s infinite linear;
+  /* beautify ignore:start */
+  /* beautify ignore:end */
 }
-
-/* line 16, ../../src/sass/_loader.scss */
-.loader,
-.loader:after {
-  border-radius: 50%;
-  width: 10em;
-  height: 10em;
-}
-
 @keyframes load8 {
   0% {
     transform: rotate(0deg);
@@ -651,52 +695,51 @@ html *:after, html *:before, html *:not(head) {
     transform: rotate(360deg);
   }
 }
-/* scss-lint:enable all */
-/* line 16, ../../src/sass/styles.scss */
-.hide--important {
-  display: none !important;
+/* line 30, ../../src/sass/_loader.scss */
+.loader, .loader--global, .loader--player,
+.loader:after,
+.loader--global:after,
+.loader--player:after {
+  border-radius: 50%;
+  width: 10rem;
+  height: 10rem;
 }
 
-/* line 20, ../../src/sass/styles.scss */
+/* scss-lint:enable all */
+/* line 13, ../../src/sass/styles.scss */
 html {
   font-size: 100%;
   line-height: 1.5em;
-  /* vertical rhythm */
 }
 
-/* line 27, ../../src/sass/styles.scss */
+/* line 19, ../../src/sass/styles.scss */
 body {
   height: inherit;
   overflow: hidden;
 }
-/* line 35, ../../src/sass/styles.scss */
+/* line 27, ../../src/sass/styles.scss */
 body.fix-nav nav {
   left: 0;
   top: 0;
   padding: 10px;
   background-color: whitesmoke;
 }
-/* line 45, ../../src/sass/styles.scss */
+/* line 37, ../../src/sass/styles.scss */
 body.show-loader, body.show-player-loader {
   overflow: hidden;
 }
-/* line 65, ../../src/sass/styles.scss */
+/* line 57, ../../src/sass/styles.scss */
 body.show-player-loader .player {
-  position: relative;
   visibility: visible !important;
 }
-/* line 76, ../../src/sass/styles.scss */
-body.show-grid-view .list-container {
-  position: relative;
-}
-/* line 82, ../../src/sass/styles.scss */
+/* line 69, ../../src/sass/styles.scss */
 body.show-grid-view ul:not(:empty) {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 0;
 }
-/* line 97, ../../src/sass/styles.scss */
+/* line 84, ../../src/sass/styles.scss */
 body.show-grid-view li {
   flex-basis: auto;
   width: 100px;
@@ -704,16 +747,17 @@ body.show-grid-view li {
   font-size: 0;
   text-decoration: none;
   margin-top: 10px;
+  user-select: none;
 }
-/* line 117, ../../src/sass/styles.scss */
+/* line 105, ../../src/sass/styles.scss */
 body.show-grid-view li:not(:first-child) {
   padding-top: 0;
 }
-/* line 122, ../../src/sass/styles.scss */
+/* line 110, ../../src/sass/styles.scss */
 body.show-grid-view li:hover .thumbnail {
   background-blend-mode: screen;
 }
-/* line 128, ../../src/sass/styles.scss */
+/* line 116, ../../src/sass/styles.scss */
 body.show-grid-view li.no-artwork .thumbnail {
   font-size: initial;
   display: table-cell;
@@ -723,58 +767,47 @@ body.show-grid-view li.no-artwork .thumbnail {
   text-transform: capitalize;
   text-shadow: 0 0 4px #000;
 }
-/* line 139, ../../src/sass/styles.scss */
+/* line 127, ../../src/sass/styles.scss */
 body.show-grid-view li.no-artwork:hover .thumbnail {
   background-color: #f50;
   /*    color: #000;*/
 }
 
-/* line 159, ../../src/sass/styles.scss */
+/* line 147, ../../src/sass/styles.scss */
 main {
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  height: calc(100% - 2.5rem + 2px);
   padding: 0 10px 10px;
+  box-shadow: 0 0 15px gray;
   background-blend-mode: overlay;
   background-size: cover;
   background-color: whitesmoke;
-  box-shadow: 0 0 15px gray;
   overflow-y: auto;
-  height: calc(100% - 2px - 2.5rem);
 }
 
-/* line 173, ../../src/sass/styles.scss */
+/* line 160, ../../src/sass/styles.scss */
 section + section {
   padding-top: 10px;
 }
 
-/* line 181, ../../src/sass/styles.scss */
+/* line 168, ../../src/sass/styles.scss */
 nav {
   transition: all .2s;
 }
 
-/* line 185, ../../src/sass/styles.scss */
+/* line 172, ../../src/sass/styles.scss */
 .toggle-grid-view {
-  outline: 0;
   margin-top: 10px;
-  font-size: .75em;
-  color: darkgray;
-}
-/* line 191, ../../src/sass/styles.scss */
-.toggle-grid-view:hover {
-  color: #666;
 }
 
-/* line 196, ../../src/sass/styles.scss */
+/* line 176, ../../src/sass/styles.scss */
 .player {
   margin-top: 10px;
   height: 166px;
 }
 
-/* line 201, ../../src/sass/styles.scss */
+/* line 181, ../../src/sass/styles.scss */
 .overlay {
-  position: absolute;
-  width: 100%;
   min-height: inherit;
   background-color: whitesmoke;
   z-index: 9;
@@ -782,27 +815,23 @@ nav {
 }
 
 /* roll our own */
-/* line 214, ../../src/sass/styles.scss */
-.loader.global-loader {
-  z-index: 99;
-}
-/* line 218, ../../src/sass/styles.scss */
-.loader.global-loader, .loader.player-loader {
-  display: none;
-  margin: auto;
-  position: absolute;
+/* line 194, ../../src/sass/styles.scss */
+.loader--global, .loader--player {
   top: calc(50% - 5em);
   left: calc(50% - 5em);
 }
+/* line 204, ../../src/sass/styles.scss */
+.loader--global {
+  z-index: 99;
+}
 
-/* line 228, ../../src/sass/styles.scss */
+/* line 209, ../../src/sass/styles.scss */
 iframe {
-  width: 100%;
   box-shadow: 0 0 2px #ccc;
   border-radius: 4px;
 }
 
-/* line 237, ../../src/sass/styles.scss */
+/* line 218, ../../src/sass/styles.scss */
 input[type=text] {
   font-size: 1rem;
   width: 100%;
@@ -813,31 +842,30 @@ input[type=text] {
   box-shadow: 0 0 4px darkgray;
 }
 
-/* line 248, ../../src/sass/styles.scss */
+/* line 229, ../../src/sass/styles.scss */
 ::-webkit-input-placeholder {
   text-transform: capitalize;
 }
 
-/* line 253, ../../src/sass/styles.scss */
+/* line 234, ../../src/sass/styles.scss */
 ul:not(:empty) {
   margin-top: 10px;
   list-style-type: none;
 }
 
-/* line 258, ../../src/sass/styles.scss */
+/* line 239, ../../src/sass/styles.scss */
 li {
   text-decoration: underline;
-  cursor: pointer;
 }
-/* line 262, ../../src/sass/styles.scss */
+/* line 243, ../../src/sass/styles.scss */
 li:hover {
   color: #f50;
 }
-/* line 266, ../../src/sass/styles.scss */
+/* line 247, ../../src/sass/styles.scss */
 li:not(:first-child) {
   padding-top: 10px;
 }
-/* line 270, ../../src/sass/styles.scss */
+/* line 251, ../../src/sass/styles.scss */
 li .thumbnail {
   display: none;
   text-decoration: none;
@@ -848,55 +876,53 @@ li .thumbnail {
   width: inherit;
 }
 
-/* line 281, ../../src/sass/styles.scss */
+/* line 262, ../../src/sass/styles.scss */
 .truncated {
   text-decoration: inherit;
 }
 
-/* line 285, ../../src/sass/styles.scss */
+/* line 266, ../../src/sass/styles.scss */
 .selected {
   color: #f50;
 }
-/* line 288, ../../src/sass/styles.scss */
+/* line 269, ../../src/sass/styles.scss */
 .selected.no-artwork .thumbnail {
   background-color: #f50;
   box-shadow: inset 0 0 30px #fff;
 }
-/* line 293, ../../src/sass/styles.scss */
+/* line 274, ../../src/sass/styles.scss */
 .selected .thumbnail {
   background-blend-mode: screen;
 }
 
-/* line 298, ../../src/sass/styles.scss */
+/* line 279, ../../src/sass/styles.scss */
 .visited {
   color: darkgray;
 }
-/* line 301, ../../src/sass/styles.scss */
+/* line 282, ../../src/sass/styles.scss */
 .visited.no-artwork .thumbnail {
   background-color: plum;
 }
 
-/* line 306, ../../src/sass/styles.scss */
+/* line 287, ../../src/sass/styles.scss */
 .pagination {
+  line-height: 2.5rem;
   border-top: 2px solid lightgray;
-  position: absolute;
   bottom: 0;
   background-color: whitesmoke;
   padding-left: 10px;
   padding-right: 10px;
   left: 0;
-  line-height: 2.5rem;
 }
-/* line 319, ../../src/sass/styles.scss */
+/* line 300, ../../src/sass/styles.scss */
 .pagination i {
-  cursor: pointer;
   font-style: normal;
   font-size: 1.5rem;
   color: darkgray;
   text-transform: uppercase;
   transition: color .5s;
 }
-/* line 327, ../../src/sass/styles.scss */
+/* line 308, ../../src/sass/styles.scss */
 .pagination i:hover {
   color: #666;
 }
