--- a/src/sass/_loader.scss
+++ b/src/sass/_loader.scss
@@ -1,32 +1,36 @@
 /* reference: http://projects.lukehaas.me/css-loaders/ ;) */
-/* scss-lint:disable all */
+/* scss-lint:disable Compass::PropertyWithMixin */
+/* scss-lint:disable ColorVariable */
 .loader {
-    margin: 60px auto;
     font-size: 10px;
     position: relative;
-    text-indent: -9999em;
-    border-top: 1.1em solid rgba(255, 85, 0, 0.2);
-    border-right: 1.1em solid rgba(255, 85, 0, 0.2);
-    border-bottom: 1.1em solid rgba(255, 85, 0, 0.2);
-    border-left: 1.1em solid #ff5500;
+    text-indent: -9999rem;
+    border-top: 1.1rem solid rgba(255, 85, 0, .2);
+    border-right: 1.1rem solid rgba(255, 85, 0, .2);
+    border-bottom: 1.1rem solid rgba(255, 85, 0, .2);
+    border-left: 1.1rem solid $orange;
     transform: translateZ(0);
     animation: load8 1.1s infinite linear;
+
+    /* beautify ignore:start */
+    @at-root {
+        @keyframes load8{
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+    }
+    /* beautify ignore:end */
 }
 
 .loader,
 .loader:after {
     border-radius: 50%;
-    width: 10em;
-    height: 10em;
-}
-
-@keyframes load8 {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
+    width: 10rem;
+    height: 10rem;
 }
 /* scss-lint:enable all */
